--- a/code/webapp/index.html
+++ b/code/webapp/index.html
@@ -49,13 +49,19 @@
           <h1>Smart Parking Console</h1>
         </div>
         <div class="social-icons">
-          <a href="#" class="text-dark"><i class="fab fa-youtube"></i></a>
+          <a
+            href="https://youtu.be/ZhnvmG-MbWw?feature=shared"
+            class="text-dark"
+            ><i class="fab fa-youtube"></i
+          ></a>
           <a
             href="https://www.linkedin.com/in/davide-avesani-394835223"
             class="text-dark"
             ><i class="fab fa-linkedin"></i
           ></a>
-          <a href="#" class="text-dark"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/aveklan/smart-parking" class="text-dark"
+            ><i class="fab fa-github"></i
+          ></a>
           <a href="https://example.com" class="text-dark"
             ><i class="fas fa-external-link-alt"></i
           ></a>
